# yip

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  example.config  rustfmt.toml  task-7-report.md
.cargo/: mutants.toml
.github/workflows/: ci.yml  coverage.yml  integration.yml  mutants.yml
.superpowers/sdd/: harden-report.md
crates/yip-bench/: Cargo.toml  README.md  RESULTS.md
crates/yip-bench/benches/: hotpath.rs
crates/yip-bench/examples/: aead_spike.rs  fec_rate_experiment.rs  mtu_symbol_sweep.rs  pipeline_profile.rs  plan_cache_spike.rs
crates/yip-bench/src/: lib.rs
crates/yip-bench/tests/: netem_bench.rs  run-compare.sh  run-driver-ab-rtt.sh  run-fec-compare.sh  run-iperf-compare.sh  run-quic-vs-raw.sh  run-scp-compare.sh  run-yip-netem.sh  udp_rx.py  udp_tx.py
crates/yip-crypto/: Cargo.toml
crates/yip-crypto/src/: lib.rs
crates/yip-device/: Cargo.toml
crates/yip-device/src/: lib.rs
crates/yip-io/: Cargo.toml
crates/yip-io/src/: addr.rs  epoll.rs  gso.rs  lib.rs  poll.rs  tun_offload.rs  uring.rs
crates/yip-membership/: Cargo.toml
crates/yip-membership/src/: cert.rs  gossip.rs  ids.rs  lib.rs  record.rs
crates/yip-obf/: Cargo.toml
crates/yip-obf/src/: lib.rs
crates/yip-rendezvous/: Cargo.toml
crates/yip-rendezvous/src/: lib.rs  proto.rs  server.rs
crates/yip-transport/: Cargo.toml
crates/yip-transport/src/: classify.rs  control.rs  fec.rs  feedback.rs  flow.rs  gf256.rs  lib.rs  lossdetect.rs  retxbuf.rs  rs.rs
crates/yip-utls/: Cargo.toml
crates/yip-utls/src/: auth.rs  error.rs  handshake.rs  hello.rs  ja.rs  lib.rs  server.rs  stream.rs  template.rs  wire.rs
crates/yip-utls/tests/: handshake_live.rs  ja_diff.rs
crates/yip-utls/tests/fixtures/: chrome150.txt
crates/yip-wire/: Cargo.toml
crates/yip-wire/fuzz/: Cargo.toml
crates/yip-wire/fuzz/fuzz_targets/: deframe.rs
crates/yip-wire/src/: lib.rs
docs/: architecture.md  configuration.md  testing-and-benchmarking.md  user-guide.md
docs/research/: 00-overview.md  01-wireguard-family.md  02-mesh-overlays.md  03-anonymity-networks.md  04-mixnet-proxies.md  05-transport-fec.md  06-crypto-pq-he.md  07-dpi-detection.md  08-xdp-ebpf.md  2026-07-22-mtu-packetization-findings.md
docs/superpowers/plans/: 2026-06-28-data-plane-m1-scaffold.md  2026-06-29-data-plane-m2-yip-wire.md  2026-06-29-data-plane-m3-yip-crypto.md  2026-06-29-data-plane-m4-io-device.md  2026-06-29-data-plane-m5-yip-transport.md  2026-06-29-data-plane-m5h-flow-heuristic.md  2026-06-29-data-plane-m6-yipd-tunnel.md  2026-06-30-data-plane-feedback-arq.md  2026-06-30-data-plane-throughput-pass.md  2026-06-30-io-uring-busy-poll.md  2026-06-30-yip-bench-harness.md  2026-07-02-data-plane-correctness-11b.md  2026-07-02-l2-tap-mac-learning.md  2026-07-05-multipeer-data-plane-2a.md  2026-07-06-decentralized-discovery-2c.md  2026-07-06-rendezvous-nat-traversal-2b.md  2026-07-07-antidpi-obfuscation-3a.md  2026-07-08-antidpi-junk-traffic-shaping-3b.md  2026-07-09-antidpi-quic-mimicry-3c1.md  2026-07-09-throughput-plan-cached-fec-4a.md  2026-07-09-throughput-rs-codec-4a.md  2026-07-11-throughput-batched-io.md  2026-07-11-throughput-fast-aead.md  2026-07-11-throughput-gso-send.md  2026-07-11-throughput-pq-fec.md  2026-07-12-antidpi-tls-mimicry-3c2.md  2026-07-12-throughput-tun-offload.md  2026-07-13-antidpi-reality-relay-3c3.md  2026-07-14-antidpi-port-plausibility-3d.md  2026-07-14-antidpi-relay-dial-3c4.md  2026-07-15-reality-1-server-forwarding.md  2026-07-15-reality-2-utls-client.md  2026-07-15-reality-3-server-cert-steal.md  2026-07-16-reality-4a-client-wiring.md  2026-07-16-reality-4b-relay-verify.md  2026-07-17-reality-5a-dest-flight-capture.md  2026-07-17-reality-5b-serverhello-emit.md  2026-07-17-reality-5c-server-flight-emit.md  2026-07-18-reality-5d-wire-server-flight-emit.md  2026-07-19-rekey-9a-session-rotation.md  (+3 more)
docs/superpowers/specs/: 2026-06-28-data-plane-fec-transport-design.md  2026-06-30-data-plane-feedback-arq-design.md  2026-06-30-data-plane-throughput-pass-design.md  2026-06-30-io-uring-busy-poll-design.md  2026-07-01-issues-7-11-orchestration-design.md  2026-07-02-l2-tap-mac-learning-design.md  2026-07-02-session-rekey-pq-hybrid-design.md  2026-07-02-uring-gso-fate-tags-design.md  2026-07-03-fec-object-batching-design.md  2026-07-03-multicore-sharding-design.md  2026-07-04-multipeer-data-plane-design.md  2026-07-06-decentralized-discovery-design.md  2026-07-06-rendezvous-nat-traversal-design.md  2026-07-07-antidpi-obfuscation-3a-design.md  2026-07-08-antidpi-junk-traffic-shaping-3b-design.md  2026-07-09-antidpi-quic-mimicry-3c1-design.md  2026-07-09-throughput-plan-cached-fec-4a-design.md  2026-07-09-throughput-rs-codec-4a-design.md  2026-07-11-throughput-batched-io-design.md  2026-07-11-throughput-fast-aead-design.md  2026-07-11-throughput-gso-send-design.md  2026-07-11-throughput-pq-fec-design.md  2026-07-12-antidpi-tls-mimicry-3c2-design.md  2026-07-12-throughput-tun-offload-design.md  2026-07-13-antidpi-reality-relay-3c3-design.md  2026-07-13-antidpi-relay-dial-3c4-design.md  2026-07-14-antidpi-port-plausibility-3d-design.md  2026-07-15-reality-2-utls-client-design.md  2026-07-15-reality-3-server-cert-steal-design.md  2026-07-15-reality-tls-clienthello-control-research.md  2026-07-15-reality-tls-milestone-design.md  2026-07-16-reality-4a-client-wiring-design.md  2026-07-16-reality-4b-relay-verify-design.md  2026-07-17-reality-5a-dest-flight-capture-design.md  2026-07-17-reality-5b-serverhello-emit-design.md  2026-07-17-reality-5c-server-flight-emit-design.md  2026-07-18-reality-5d-wire-server-flight-design.md  2026-07-19-rekey-9a-session-rotation-design.md  2026-07-19-relay-rekey-completion-design.md  2026-07-22-session-lifecycle-hardening-design.md  (+2 more)
