[package]
name = "yip-bench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
yip-crypto = { path = "../yip-crypto" }
yip-wire = { path = "../yip-wire" }
yip-transport = { path = "../yip-transport" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hotpath"
harness = false

[lints]
workspace = true
