[package]
name = "yip-membership"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake2 = { workspace = true }
ed25519-dalek = { version = "2.1", default-features = false }

[dev-dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[lints]
workspace = true
