[package]
name = "yip-utls"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
md-5 = "0.10"
ring = "0.17"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
getrandom = "0.2"
tokio = { version = "1", features = ["io-util", "net", "macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
