[package]
name = "yip-utls"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
md-5 = "0.10"
ring = "0.17"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["std"] }
tokio = { version = "1", features = ["io-util", "net", "macros", "rt"] }
ml-kem = "0.2"
rand_core = { version = "0.6", default-features = false }
# REALITY.4b: ECDSA-P256 (ecdsa_secp256r1_sha256, the Chrome-advertised sig alg)
# for the shared-secret-derived cert key — client verify + server binding.
# `pkcs8` lets the server hand the derived key to rcgen; `ecdsa` for verify.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
